# STLTest

./: .gitignore  CMakeLists.txt  README.md  STLWriter.cpp  STLWriter.h  Solid.cpp  Solid.h  SolidLibrary.cpp  SolidLibrary.h  test_stl.cpp
python_tests/: test_nurbs.py  test_rational_bezier.py
src/: BezierPatch.cpp  BezierPatch.h  BezierTriangle.cpp  BezierTriangle.h  Body.cpp  Body.h  BodyDifference.cpp  BodyDifference.h  BodyFactory.cpp  BodyFactory.h  BodyIntersection.cpp  BodyIntersection.h  BodyUnion.cpp  BodyUnion.h  CMakeLists.txt  Color.h  Face.cpp  Face.h  FaceBezierPatches.cpp  FaceBezierPatches.h  FaceBezierTriangles.cpp  FaceBezierTriangles.h  FaceMesh.cpp  FaceMesh.h  FaceNurbs.cpp  FaceNurbs.h  FaceTriangles.cpp  FaceTriangles.h  Geometry.cpp  Geometry.h  GeometryBezierPatches.cpp  GeometryBezierPatches.h  GeometryBezierTriangles.cpp  GeometryBezierTriangles.h  GeometryNurbs.cpp  GeometryNurbs.h  Image.h  ImageGenerator.cpp  ImageGenerator.h  ImageIoBmp.cpp  (+49 more)
tests/: CMakeLists.txt  test_BMPFile.cpp  test_Renderer.cpp  test_bmpfile.cpp  test_bodyboolean.cpp  test_bodyfactory.cpp  test_fileformat.cpp  test_fractal_tetrahedron.cpp  test_geometry.cpp  test_level_of_details.cpp  test_measurements.cpp  test_meshoperations.cpp  test_renderer.cpp  test_sphere_hole.step  test_stepfile.cpp
